--- a/2rozdzial1.tex
+++ b/2rozdzial1.tex
@@ -8,17 +8,31 @@
 
 A mobile manipulation system (MMS) is a robotic system that is capable of both manipulating objects and locomotion. Typically, the system is composed of a robotic arm based on a robotic mobile platform. Such configuration enables the manipulator to operate in an unlimited workspace, thus providing great application opportunities.
 
-Mobile manipulators are commonly used to relieve people in hostile situations. They are, for example, widely used in the field of chemical, biological, radioactive or nuclear (CBRN) defense. Explosive materials and other hazardous substances can be disposed without exposing operators to any danger. Another example is space exploration, where manipulation systems are used in planetary rovers in unmanned exploratory missions on other planets. Substitution of human operators in such expeditions significantly reduce their expenditure and risk.
+Mobile manipulators are commonly used to relieve people in hostile situations. They are, for example, widely used in the field of chemical, biological, radioactive or nuclear (CBRN) defense. Explosive materials and other hazardous substances can be disposed without exposing operators to any danger. Another example is space exploration, where manipulation systems are used in planetary rovers in unmanned exploratory missions on other planets. Substitution of human operators in such expeditions significantly reduces their expenditure and risk.
+
+\begin{figure}[H]
+\centering
+\includegraphics[totalheight=0.3\textheight]{fig/aunav}
+\caption{Example of a CBRN robot \cite{aunav}}
+\label{fig:aunav}
+\end{figure}
 
 Augmenting the MMS design with a certain degree of autonomy, brings the possibility for the robot to be used as a human-assistant in the household. Most of current applications in this field refer to pick up and delivery services, that have the potential to improve lives of the elderly, injured and disabled people. Furthermore, typical service robots in human environments are dedicated to accomplish only a single task, such as vacuum cleaning, lawn mowing, pool cleaning or window washing. Their operation is achieved by adjusting existing domestic appliances with a degree of autonomy. With a multi purpose robotic system such as a mobile manipulator, it is potentially possible not to replace existing devices but to substitute the human operator. 
 
-Autonomous gripping and transportation with a MMS could also be used in the industry for designing flexible factory plants and intelligent warehouses \cite{aimm}. A manufacturing process that utilizes the MMS robots is simpler and more cost effective in adapting to the market changes. The production could be more customized by applying MMS robots in transportation, preparatory and post-processing tasks. Furthermore, even the most advanced distribution centres, such as the Amazon Kiva Systems, require repetitive human work to manipulate goods in the unstructured environment. Therefore, the warehousing process could benefit by applying autonomous MMS robots and there are ongoing efforts in this area \cite{amazonchallenge}.
+Autonomous gripping and transportation with a MMS could also be used in the industry for designing flexible factory plants and intelligent warehouses \cite{aimm}. A manufacturing process that utilizes the MMS robots is simpler and more cost effective in adapting to the market changes. Applying MMS robots in transportation, preparatory and post-processing tasks brings the possibility of a more customized production. Furthermore, even the most advanced distribution centres, such as the Amazon Kiva Systems, require repetitive human work to manipulate goods in the unstructured environment. Therefore, there are benefits of applying autonomous MMS robots to the warehousing process and there are ongoing efforts in this area \cite{amazonchallenge}.
 
 % www.willowgarage.com/pages/pr2/overview
 
-One of the most promising applications of MMS is the PR2 development platform from the Willow Garage company. PR2 is a human-sized robot, equipped with two 7 degree-of-freedom manipulators, omnidirectional mobile base, a processing power of two Xeon servers with 8 cores and 24GB of RAM each, and a multitude of sensors, including stereo, time-of flight and structured light cameras, LIDAR scanners, and an inertial measurement unit \cite{prspecs}. The PR2 robot has already proven successful in such dexterous experiments as opening doors, playing pool, folding towels and serving beverages to people. 
+One of the most promising applications of MMS is the PR2 research platform from the Willow Garage company. PR2 is a human-sized robot, equipped with two 7 degree-of-freedom manipulators, omnidirectional mobile base, a processing power of two Xeon servers with 8 cores and 24GB of RAM each, and a multitude of sensors, including stereo, time-of flight and structured light cameras, LIDAR scanners, and an inertial measurement unit \cite{prspecs}. The PR2 robot has already proven successful in such dexterous experiments as opening doors, playing pool, folding towels and serving beverages to people. 
 
-Wide functionality of a MMS robot makes its design a challenging task. The unstructured working environment and additional degrees of freedom complicate the autonomous control of such system. Furthermore, the workspace of a mobile manipulator is often shared with people and other vehicles. Such environment renders many potentially hazardous situations and requires a highly sophisticated control system with vision based feedback. The idea of the project is to develop a MMS system, that will serve as a research base in these areas.
+\begin{figure}[H]
+\centering
+\includegraphics[totalheight=0.3\textheight]{fig/pr2}
+\caption{The PR2 robotic research platform \cite{prspecs}}
+\label{fig:pr2}
+\end{figure}
+
+The wide functionality of a MMS robot makes its design a challenging task. The unstructured working environment and additional degrees of freedom complicate the autonomous control of such system. Furthermore, the workspace of a mobile manipulator is often shared with people and other vehicles. Such environment renders many potentially hazardous situations and requires a highly sophisticated control system with vision based feedback. The idea of the project is to develop a MMS system, that will serve as a research base in these areas.
 
 %---------------------------------------------------------------------------
 
@@ -115,7 +129,7 @@ The first stage of the project was to create the mechanical construction of the 
 \end{figure}
 
 
-The manipulators are based on a four wheeled mobile platform. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels [wikipedia], as they are called, are equipped with a set of rollers attached to their circumference at a \SI{45}{\degree} angle, which allow a vehicle to move in any direction without turning the wheels. To achieve the desired steering, the wheels are independently actuated, in a way that the resultant force vectors move or rotate the entire platform in a specified direction. In addition, such mechanism increases the stability of the entire platform, which is particularly important during the manipulation tasks. The physical dimensions of the mobile platform are also provided in the Table \ref{tab:dimensions}. The entire mechanical structure has been laser cut from aluminium sheets of \SI{1.5}{}, \SI{2}{} and \SI{4}{\milli\meter} thickness.
+The manipulators are based on a four wheeled mobile platform. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels \cite{wikipedia}, as they are called, are equipped with a set of rollers attached to their circumference at a \SI{45}{\degree} angle, which allow a vehicle to move in any direction without turning the wheels. To achieve the desired steering, the wheels are independently actuated, in a way that the resultant force vectors move or rotate the entire platform in a specified direction. In addition, such mechanism increases the stability of the entire platform, which is particularly important during the manipulation tasks. The physical dimensions of the mobile platform are also provided in the Table \ref{tab:dimensions}. The entire mechanical structure has been laser cut from aluminium sheets of \SI{1.5}{}, \SI{2}{} and \SI{4}{\milli\meter} thickness.
 
 \begin{table}[H]
 
@@ -141,7 +155,7 @@ Mobile platform & $460\times 400\times 270$ \\
 
 The next step in the construction of the MMS robot required a selection of hardware components, such as the actuators, power supply, embedded computing units and control electronics. The Figure \ref{fig:hardware} presents a categorized diagram of the selected elements. 
 
-The MMS robot utilises two types of actuators: four DC motors for each of the mobile platform wheels and the servomechanisms for manipulator joints. The selected DC motors type is the Pololu 1444 \cite{pololu} with 50:1 metal gearboxes. They achieve \SI{200}{RPM} of no-load speed and \SI{12}{\kilogram \centi\metre} of stall current. Additionally, they possess 64 CPR encoders, which multiplied by the gear ratio provide a total of 3200 counts per revolution. The type of servomechanism used for each joint, is the Turnigy 1269HV \cite{turnigy}, with titanium gears and a total stall torque of \SI{21}{\kilogram\centi\metre}. Both types of actuators are driven by the Pulse Width Modulation signal (PWM). In case of the DC motors, the PWM signal is provided by a dedicated motor driver board, named Rover 5 \cite{rover5}. This controller provides four low-resistance FET H-bridges, together with current monitoring on each motor channel. To generate the PWM signal for servomechanisms positioning, a 16-channel PWM driver chip, the PCA9685 \cite{pca9685} was used. This driver has an I2C interface for setting the PWM frequency and duty cycle on a selected channel with a 12-bit resolution.
+The MMS robot utilises two types of actuators: four DC motors for each of the mobile platform wheels and the servomechanisms for manipulator joints. The selected DC motors type is the Pololu 1444 \cite{pololu} with 50:1 metal gearboxes. They achieve \SI{200}{RPM} of no-load speed and \SI{12}{\kilogram \centi\metre} of stall torque. Additionally, they possess 64 CPR encoders, which multiplied by the gear ratio provide a total of 3200 counts per revolution. The type of servomechanism used for each joint, is the Turnigy 1269HV \cite{turnigy}, with titanium gears and a total stall torque of \SI{21}{\kilogram\centi\metre}. Both types of actuators are driven by the Pulse Width Modulation signal (PWM). In case of the DC motors, the PWM signal is provided by a dedicated motor driver board, named Rover 5 \cite{rover5}. This controller provides four low-resistance FET H-bridges, together with current monitoring on each motor channel. To generate the PWM signal for servomechanisms positioning, a 16-channel PWM driver chip, the PCA9685 \cite{pca9685} was used. This driver has an I2C interface for setting the PWM frequency and duty cycle on a selected channel with a 12-bit resolution.
 
 \tikzset{
   basic/.style  = {draw, font=\sffamily, font=\footnotesize, rectangle,text centered, minimum size=2.2cm,minimum height=0.5cm},
@@ -211,7 +225,7 @@ TP-LINK WN722N};
 \label{fig:hardware}
 \end{figure}
 
-The main computing unit, used for hosting the control server and directly interfacing with the actuator drivers, is the model B of Raspberry Pi development platform \cite{wikipedia}. This board is equipped with 700Mhz ARM11 family CPU, 512 MB of RAM and a set of GPIO ports with hardware UART, I2C and SPI interfaces. The MMS robot utilises an additional processing unit, with a much larger computing power for the vision system implementation. The NVIDIA Jetson TK1 \cite{nvidia} development board is based on the Tegra K1 System-on-Chip, that includes a quad-core 2.3 GHz ARM Cortex-A15 CPU, 2 GB of RAM, and a NVIDIA Kepler GPU with 192 CUDA cores, capable of performing over 300 GFLOPS of 32-bit floating point computations. This board provides a similar performance to a modern desktop GPU, while maintaining relatively low power consumption, which makes it a perfect match for image processing applications in mobile systems, such as the MMS robot. \textbf{Network setup.}
+The main computing unit, used for hosting the control server and directly interfacing with the actuator drivers, is the model B of Raspberry Pi development platform \cite{wikipedia}. This board is equipped with 700Mhz ARM11 family CPU, 512 MB of RAM and a set of GPIO ports with hardware UART, I2C and SPI interfaces. A USB WiFi adapter, TP-LINK WN722N is connected to the Raspberry Pi to provide remote access via WiFi network. The MMS robot utilises an additional processing unit, with a much larger computing power for the vision system implementation. The NVIDIA Jetson TK1 \cite{nvidia} development board is based on the Tegra K1 System-on-Chip, that includes a quad-core 2.3 GHz ARM Cortex-A15 CPU, 2 GB of RAM, and a NVIDIA Kepler GPU with 192 CUDA cores, capable of performing over 300 GFLOPS of 32-bit floating point computations. This board provides a similar performance to a modern desktop GPU, while maintaining relatively low power consumption, which makes it a perfect match for image processing applications in mobile systems, such as the MMS robot.  
 
 The whole system is powered by a lithium-polymer, 8 cell battery with a nominal voltage of \SI{29.6}{\volt} and capacity of a \SI{5.8}{\ampere\hour}. Due to the specific nature of a lithium-polymer battery, each of its cells has to be protected against excessive discharge. For this purpose, a cell voltage monitor is connected to the battery and generates a sound alarm if the voltage falls below a selected threshold. To integrate different operating voltages for the individual components, three DC-DC voltage converters are applied in the power system: one with \SI{6}{\volt} output and maximal current of \SI{20}{\ampere} for supplying all of the actuators, one with the output of \SI{12}{\volt} and \SI{4}{\ampere} max. for the NVIDIA Jetson board, and a \SI{5}{\volt} and \SI{4}{\ampere} max. for feeding the Raspberry Pi and the actuator drivers.
 
