--- a/3rozdzial2.tex
+++ b/3rozdzial2.tex
@@ -40,7 +40,7 @@ The correspondence problem is the most difficult part of the stereo vision. It c
 \end{figure}
 
 
-After obtaining the corresponding points, the point depth information can be derived by the means of triangulation (Figure \ref{fig:stereovision}). if the imaging properties of the camera are known, two three-dimensional lines, from the camera's projection centres to the examined point can be drawn. The intersection of those lines is then used to infer the depth of the point. 
+After obtaining the corresponding points, the point depth information can be derived by the means of triangulation (Figure \ref{fig:stereovision}). If the imaging properties of the camera are known, two three-dimensional lines, from the camera's projection centres to the examined point can be drawn. The intersection of those lines is then used to infer the depth of the point. 
 
 The main advantage of the stereo vision system is that it can be built with easily accessible, standard 2D cameras. Such cameras allow to reduce the expenditure and provide relatively high resolution. On the other hand, the stereo vision systems have many drawbacks. Firstly, their performance is reduced in environments with low ambient light intensity, which makes the system impractical in some settings. Secondly, the depth accuracy decreases quadratically with the distance. Finally, the algorithms used for feature extraction and matching, involved in solving the correspondence problem are computationally expensive and often limit the depth acquisition frame rate.
 
@@ -101,7 +101,7 @@ Wavelengths vary to suit the target: from about 10 micrometers to the UV (approx
 http://www.ti.com/lit/wp/sloa190b/sloa190b.pdf
 \end{comment}
 
-Time of flight (ToF) cameras work on a completely different principle than stereoscopic systems. ToF systems are characterised with active illumination and are composed of an near infra-red (IR) emmiter and IR camera. They work by illuminating the scene with a modulated IR beam and recording the received light, as presented in the figure 5. The distance from the recorded object is then calculated by measuring the phase shift between the illuminated and reflected signals. 
+Time of flight (ToF) cameras work on a completely different principle than stereoscopic systems. ToF systems are characterised with active illumination and are composed of an near infra-red (IR) emmiter and IR camera. They work by illuminating the scene with a modulated IR beam and recording the received light, as presented in the Figure \ref{fig:tofprinciple}. The distance from the recorded object is then calculated by measuring the phase shift between the illuminated and reflected signals. 
 
 In the simplest form, the ToF cameras use single light pulses \cite{titof}. After a short period of illumination, the reflected energy is then integrated at every pixel with two out of phase windows over the same $\Delta t$ time, resulting in two electrical charges $Q_1$ and $Q_2$. The depth distance $d$ is then computed as $d = \frac{1}{2}c\Delta t \frac{Q_2}{Q_1+Q_2}$, where $c$ is the speed of light constant. A more advanced method is to project illumination modulated by a continuous wave signal, commonly a square wave. In this case, four sampling windows, shifted by \SI{90}{\degree} angle, resulting in $Q_1$,$Q_2$, $Q_3$ and $Q_4$ charges. The phase angle $\phi$ between the projected and the reflected signals is given by $\phi = arctan \frac{Q_3 - Q_4}{Q_1 - Q_2} $ and the final depth $d = \frac{c}{4\pi f}\phi$. The principle of the continuous wave method is illustrated by the Figure \ref{fig:tofprinciple}.
 
@@ -175,10 +175,10 @@ The structured light (SL) depth measurement technique combines some of the featu
 
 	There are many pattern strategies that allow for correspondence identification, including projections of grids, dots, vertical slits and multi-color patterns. In the literature, particular attention is paid to fringe patterns (Figure \ref{fig:slprinciple}), which are suitable to maximize the measurement resolution \cite{sensors}. Moreover, to reduce the reconstruction artifacts, the measurement process is often extended into a sequence of different pattern projections. A comprehensive assessment of such pattern codes can be found in \cite{slcodes}.
 	
-	Depth measuring devices that employ the SL technique suffer from many drawbacks. Utilizing multiple pattern frames introduces high latency and makes the measurement ill conditioned for dynamic scenes. Moreover, the system performance is degraded in bright ambient light. On the other hand, popular SL devices are characterized with relatively high, VGA (640x480) depth map resolution and are easily accessible on the consumer market.
+	Depth measuring devices that employ the SL technique suffer from many drawbacks. Utilizing multiple pattern frames introduces high latency and makes the measurement ill conditioned for dynamic scenes. Moreover, the system performance is degraded in bright ambient light and the system is unable to measure distances from highly reflective or transparent surfaces. On the other hand, popular SL devices are characterized with relatively high, VGA (640x480) depth map resolution and are easily accessible on the consumer market.
 
 
-	A particularly noteworthy application of SL based depth data acquisition device is the Kinect by Microsoft. In addition to an RGB camera and an array of microphones, the device includes an IR projector-camera pair from the PrimeSense Ltd. company, used for depth measurements. The SL light pattern used in Kinect is a non-periodic speckle pattern produced by the interference of partially coherent beams (Figure X). In this device, every pixel is identified in the IR image using a correlation window, after which the depth information is calculated, using triangulation. The Kinect device is produced as a gaming controller for the Xbox 360 console and it is widely available at the consumer market with a relatively low price. Moreover, there are many open source drivers for the Kinect device, which make it a perfect match for robotic and research applications.
+	A particularly noteworthy application of SL based depth data acquisition device is the Kinect by Microsoft. In addition to an RGB camera and an array of microphones, the device includes an IR projector-camera pair from the PrimeSense Ltd. company, used for depth measurements. The SL light pattern used in Kinect is a non-periodic speckle pattern produced by the interference of partially coherent beams (Figure \ref{fig:kinectspeckle}). In this device, each pixel is identified in the IR image using a correlation window, after which the depth information is calculated, using triangulation \cite{borenstein2012making}. The Kinect device is produced as a gaming controller for the Xbox 360 console and it is widely available at the consumer market with a relatively low price. Moreover, there are many open source drivers for the Kinect device, which make it a perfect match for robotic and research applications.
 	
 \begin{figure}[H]
 \centering
