--- a/6summary.tex
+++ b/6summary.tex
@@ -3,7 +3,7 @@
 \markboth{Summary}{Summary}
 \addcontentsline{toc}{chapter}{Summary}  
 
-The aim of this study was to design a robotic research platform and attempt to implement an autonomous operating mode based on the depth data analysis. As a result, a fully operational, mobile robot with a set of two serial manipulators was created. The implemented system is able to independently move among obstacles and gives the possibility of recognizing simple shaped objects. This work presents the design process of the robot, surveys some of the modern depth data acquisition techniques, provides an introduction to the methods of 3D image processing and, finally, describes the synthesis of the autonomous operation mode for the task of searching for predefined objects. 
+The aim of this study was to design a robotic research platform and attempt to implement an autonomous operating mode based on the depth data analysis. As a result, a fully operational, mobile robot with a set of two serial manipulators was created. The implemented system is able to independently move among obstacles and gives the possibility of recognizing simple shaped objects. This work presents the design process of the robot, surveys some of the modern depth data acquisition techniques, provides an introduction to the methods of 3D image processing and, finally, describes the synthesis of the autonomous control mode for the task of searching for predefined objects. 
 
 The most important conclusions drawn from the obtained results are related to the difficulties in the analysis of the acquired depth data, especially in the field of object recognition. As it is a wide, open and relatively new research area, it requires a significant amount of time to explore and implement the currently applied solutions. Furthermore, each of the processing steps possess a vast array of different methodologies, most of which are governed by some manually adjusted parameters. In order to achieve the expected results, a lot of experience and a large number of parameter tuning trials is required.
 
