--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -39,7 +39,6 @@ volume = "37",
 number = "4",
 pages = "827 - 849",
 year = "2004",
-note = "Agent Based Computer Vision ",
 issn = "0031-3203",
 doi = "http://dx.doi.org/10.1016/j.patcog.2003.10.002",
 url = "http://www.sciencedirect.com/science/article/pii/S0031320303003303",
@@ -139,7 +138,7 @@ year = {2012},
 
 @InProceedings{ransacsurvey,
 author = {Sunglok Choi, Taemin Kim and Wonpil Yu},
-title = {Performance Evaluation of RANSAC Family},
+title = {{Performance Evaluation of RANSAC Family}},
 booktitle = {In Proceedings of the British Machine Vision Conference (BMVC)},
 year = {2009},
 url=http://www.bmva.org/bmvc/2009/Papers/Paper355/Paper355.pdf
@@ -240,4 +239,8 @@ year = "2012"
 
 @misc{netlib,
   howpublished = {\url{http://cpp-netlib.org/}}
+}
+
+@misc{aunav,
+  howpublished = {\url{http://www.proytecsa.net/}}
 }
