--- a/praca.tex
+++ b/praca.tex
@@ -6,6 +6,8 @@
 % dodatkowe pakiety
 \usepackage{enumerate}
 \usepackage{listings}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{mathtools}
@@ -72,7 +74,7 @@
 %\faculty{Wydział Elektrotechniki, Automatyki,\protect\\[-1mm] Informatyki i Inżynierii Biomedycznej}
 \faculty{Faculty of Electrical Engineering, Automatics, Computer Science and Biomedical Engineering}
 
-\acknowledgements{I wish to thank to the Supervisor of this thesis for help and to the ABB Corporate Research Centre for support in the development of this project }
+\acknowledgements{I wish to thank to the Supervisor of this thesis for help and to the ABB Corporate Research Centre for support in development of this project }
 
 
 \setlength{\cftsecnumwidth}{10mm}
